Recognize more date formats, minor fixes