@@ -60,7 +60,6 @@ public class Day {
     }
 
     public void removeLast(EnumCategory category) {
-        System.out.println(categories.get(category).size() - 1);
-        categories.get(category).remove(categories.get(category).size() - 1);
+        categories.get(category).removeLast();
     }
 }
